TestCases/Errors/threaded_movement/observations/aut_12_obs.spm
 obs   15-5   0.000174097975946025 
 obs   16-5   5.2875286485863e-05 
 obs   17-5   0.000102627257799672 
 obs   14-6   0.000716786916078009 
 obs   15-6   0.000195426587169718 
 obs   16-6   0.00011975959073825 
 obs   17-6   6.96306387147078e-05 
 obs   14-7   0.000298361601953336 
 obs   15-7   0.0001428549300852 
 obs   16-7   0.000124797204542618 
 obs   17-7   0 
 obs   14-8   0.000203707540968236 
 obs   14-9   0 
 obs   9-10   0.00272727272727273 
 obs   10-10   0.00152958152958153 
 obs   13-10   0.00487179487179487 
 obs   14-10   0.00212467948717949 
 obs   10-11   0.000952380952380952 
 obs   13-11   0.00269230769230769 
 obs   12-18   0 
 obs   13-18   0.00777777777777778 
 obs   10-19   0.0072962962962963 
 obs   11-19   0.00524048215777539 
 obs   12-19   0.00166154633896569 
 error_value   15-5   0 
 error_value   16-5   0 
 error_value   17-5   0 
 error_value   14-6   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   17-6   0 
 error_value   14-7   0 
 error_value   15-7   0 
 error_value   16-7   0 
 error_value   17-7   0 
 error_value   14-8   0 
 error_value   14-9   0 
 error_value   9-10   0 
 error_value   10-10   0 
 error_value   13-10   0 
 error_value   14-10   0 
 error_value   10-11   0 
 error_value   13-11   0 
 error_value   12-18   0 
 error_value   13-18   0 
 error_value   10-19   0 
 error_value   11-19   0 
 error_value   12-19   0 
